--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Test
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cover - Free Bulma template</title>
+    <link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!-- Bulma Version 0.8.2-->
+    <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.2/css/bulma.min.css" />
+    <style type="text/css">
+        html,
+        body {
+            font-family: 'Open Sans';
+        }
+
+        img {
+            padding: 5px;
+            border: 1px solid #ccc;
+        }
+    </style>
+</head>
+
+<body>
+    <section class="hero is-fullheight is-default is-bold">
+        <div class="hero-head">
+        </div>
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <div class="columns is-vcentered">
+                    <div class="column">
+                        <h1 class="title is-2">
+                            Re5toreJustice
+                        </h1>
+                        <h2 class="subtitle is-4">
+                            We are dedicated to social justice and equality. We fight for police reform and for a better, safer community.
+                        </h2>
+                        <br>
+                        <p class="has-text-centered">
+                            <a href = "https://www.reddit.com/r/Re5toreJustice/" class="button is-medium is-info is-outlined">
+                                Reddit
+                            </a>
+                            <a href = "https://discord.gg/Z2zNadp" class="button is-medium is-info is-outlined">
+                                Discord
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="hero-foot">
+            <div class="container">
+
+            </div>
+        </div>
+    </section>
+
+</body>
+
+</html>
